--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <title>女性健康小助手 · 生理周期与情绪管理</title>
+  <title>女性健康小助手 · 梦幻紫星空版</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Firebase compat 版本：App + Realtime Database -->
@@ -17,25 +17,51 @@
       font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", "Segoe UI", sans-serif;
     }
     :root {
-      --primary: #ff6b9c;
-      --primary-soft: #ffe4ee;
-      --primary-deep: #ff4a88;
-      --bg-gradient-start: #ffe9f2;
-      --bg-gradient-end: #fff7fb;
+      /* 梦幻紫 & 星光风主色 */
+      --primary: #9b6bff;
+      --primary-soft: #e9ddff;
+      --primary-deep: #6c3bff;
+      --accent-pink: #ff7ac7;
+      --bg-gradient-start: #221638;
+      --bg-gradient-mid: #362655;
+      --bg-gradient-end: #f4ecff;
       --card-bg: #ffffff;
-      --text-main: #333333;
-      --text-soft: #777777;
-      --border-soft: rgba(255, 107, 156, 0.12);
+      --text-main: #2b2140;
+      --text-soft: #9489b5;
+      --border-soft: rgba(155, 107, 255, 0.18);
     }
     body {
       margin: 0;
-      background: radial-gradient(circle at top, var(--bg-gradient-start), var(--bg-gradient-end));
+      /* 星空渐变背景 */
+      background:
+        radial-gradient(circle at 10% 0%, rgba(255,255,255,0.12), transparent 60%),
+        radial-gradient(circle at 80% 0%, rgba(255,195,252,0.14), transparent 55%),
+        linear-gradient(180deg, var(--bg-gradient-start), var(--bg-gradient-mid) 35%, var(--bg-gradient-end) 100%);
       color: var(--text-main);
+      min-height: 100vh;
     }
+
+    /* 简单星星点缀 */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      background-image:
+        radial-gradient(circle at 10% 20%, rgba(255,255,255,0.55) 0, transparent 2px),
+        radial-gradient(circle at 30% 80%, rgba(255,255,255,0.35) 0, transparent 2px),
+        radial-gradient(circle at 70% 30%, rgba(255,255,255,0.4) 0, transparent 2px),
+        radial-gradient(circle at 85% 60%, rgba(255,255,255,0.2) 0, transparent 1.5px);
+      opacity: 0.5;
+      z-index: 0;
+    }
+
     .app-shell {
       max-width: 1100px;
       margin: 0 auto;
       padding: 16px 14px 40px;
+      position: relative;
+      z-index: 1;
     }
 
     /* 顶部导航条 */
@@ -46,10 +72,11 @@
       padding: 10px 14px;
       margin-bottom: 12px;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.9);
-      box-shadow: 0 8px 20px rgba(255, 107, 156, 0.18);
-      border: 1px solid rgba(255, 107, 156, 0.16);
-      backdrop-filter: blur(12px);
+      background: rgba(25, 16, 48, 0.88);
+      box-shadow: 0 16px 30px rgba(5, 0, 40, 0.55);
+      border: 1px solid rgba(190, 163, 255, 0.6);
+      backdrop-filter: blur(16px);
+      color: #f7f1ff;
     }
     .topbar-left {
       display: flex;
@@ -57,30 +84,33 @@
       gap: 8px;
     }
     .topbar-logo {
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background: radial-gradient(circle at 30% 20%, #ffeef5, #ff94bf);
+      width: 30px;
+      height: 30px;
+      border-radius: 999px;
+      background:
+        radial-gradient(circle at 30% 20%, #fff7ff, #c9a7ff);
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 18px;
+      box-shadow: 0 0 16px rgba(201, 167, 255, 0.9);
     }
     .topbar-title {
       font-size: 15px;
       font-weight: 600;
-      color: #ff407d;
+      color: #fef1ff;
     }
     .topbar-sub {
       font-size: 11px;
-      color: var(--text-soft);
+      color: #d3c8ff;
     }
     .topbar-right {
       font-size: 11px;
-      color: var(--primary-deep);
+      color: #fbe2ff;
       padding: 4px 9px;
       border-radius: 999px;
-      background: rgba(255, 107, 156, 0.12);
+      background: rgba(155, 107, 255, 0.25);
+      border: 1px solid rgba(226, 199, 255, 0.6);
     }
 
     .container {
@@ -93,9 +123,9 @@
 
     .card {
       background: var(--card-bg);
-      border-radius: 18px;
+      border-radius: 20px;
       padding: 18px 18px 16px;
-      box-shadow: 0 14px 30px rgba(255, 107, 156, 0.1);
+      box-shadow: 0 18px 40px rgba(25, 9, 60, 0.25);
       margin-bottom: 16px;
       border: 1px solid var(--border-soft);
       position: relative;
@@ -106,9 +136,9 @@
       position: absolute;
       inset: -30%;
       background:
-        radial-gradient(circle at 0% 0%, rgba(255, 206, 225, 0.5), transparent 60%),
-        radial-gradient(circle at 100% 0%, rgba(255, 182, 203, 0.4), transparent 55%);
-      opacity: 0.5;
+        radial-gradient(circle at 0% 0%, rgba(209, 187, 255, 0.45), transparent 60%),
+        radial-gradient(circle at 100% 0%, rgba(255, 195, 252, 0.4), transparent 55%);
+      opacity: 0.6;
       pointer-events: none;
     }
     .card > * {
@@ -127,22 +157,22 @@
     .tag-pill {
       padding: 2px 8px;
       border-radius: 999px;
-      background: rgba(255, 107, 156, 0.1);
+      background: rgba(155, 107, 255, 0.12);
       color: var(--primary-deep);
       font-size: 11px;
     }
 
     h1 {
       font-size: 22px;
-      color: #ff336f;
+      color: var(--primary-deep);
     }
     h2 {
       font-size: 18px;
-      color: #ff336f;
+      color: var(--primary-deep);
     }
     h3 {
       font-size: 15px;
-      color: #ff4a88;
+      color: var(--primary);
     }
     .small-text {
       font-size: 11px;
@@ -164,21 +194,22 @@
       display: block;
       font-size: 12px;
       margin-bottom: 4px;
-      color: #555;
+      color: #4c426b;
     }
     input, select, textarea {
       width: 100%;
       padding: 8px 10px;
       border-radius: 12px;
-      border: 1px solid #f2c6d6;
+      border: 1px solid rgba(180, 160, 255, 0.7);
       font-size: 13px;
-      background: #fffafc;
+      background: #fbf8ff;
       outline: none;
       transition: box-shadow 0.2s, border-color 0.2s, background 0.2s;
+      color: var(--text-main);
     }
     input:focus, select:focus, textarea:focus {
       border-color: var(--primary);
-      box-shadow: 0 0 0 2px rgba(255, 107, 156, 0.15);
+      box-shadow: 0 0 0 2px rgba(155, 107, 255, 0.25);
       background: #ffffff;
     }
     textarea {
@@ -200,8 +231,9 @@
       margin-bottom: 0;
       padding: 4px 7px;
       border-radius: 999px;
-      background: #fff3f8;
-      border: 1px solid rgba(255, 107, 156, 0.25);
+      background: #f4edff;
+      border: 1px solid rgba(155, 107, 255, 0.35);
+      color: #5a4c81;
     }
 
     button {
@@ -215,21 +247,21 @@
       gap: 4px;
     }
     .btn-primary {
-      background: linear-gradient(135deg, #ff75a9, #ff4a88);
+      background: linear-gradient(135deg, var(--primary), var(--accent-pink));
       color: #fff;
-      box-shadow: 0 8px 20px rgba(255, 107, 156, 0.5);
+      box-shadow: 0 10px 24px rgba(66, 37, 136, 0.7);
     }
     .btn-primary:hover {
-      filter: brightness(1.05);
+      filter: brightness(1.06);
     }
     .btn-secondary {
-      background: #fff0f6;
-      color: #ff4a88;
-      border: 1px solid rgba(255, 107, 156, 0.35);
-      box-shadow: 0 4px 10px rgba(255, 107, 156, 0.15);
+      background: #f5f0ff;
+      color: var(--primary-deep);
+      border: 1px solid rgba(155, 107, 255, 0.4);
+      box-shadow: 0 4px 12px rgba(25, 9, 60, 0.25);
     }
     .btn-secondary:hover {
-      background: #ffe1ef;
+      background: #ece1ff;
     }
     .btn-small {
       padding: 5px 10px;
@@ -245,17 +277,17 @@
       margin-bottom: 8px;
     }
     .alert-info {
-      background: #fff5fb;
-      color: #c44569;
-      border: 1px solid rgba(255, 107, 156, 0.35);
+      background: #f4edff;
+      color: #654f9c;
+      border: 1px solid rgba(155, 107, 255, 0.4);
     }
     .alert-success {
-      background: #f0fff7;
+      background: #edfdf6;
       color: #20bf6b;
       border: 1px solid rgba(32,191,107,0.25);
     }
     .alert-error {
-      background: #fff2f4;
+      background: #fff0f3;
       color: #eb3b5a;
       border: 1px solid rgba(235,59,90,0.3);
     }
@@ -264,17 +296,18 @@
       font-weight: 600;
       margin: 10px 0 4px;
       font-size: 13px;
-      color: #ff4a88;
+      color: var(--primary);
       display: flex;
       align-items: center;
       gap: 6px;
     }
     .section-title::before {
       content: "";
-      width: 6px;
-      height: 6px;
+      width: 7px;
+      height: 7px;
       border-radius: 50%;
       background: var(--primary);
+      box-shadow: 0 0 10px rgba(155, 107, 255, 0.6);
     }
 
     .step-indicator {
@@ -292,10 +325,10 @@
     .step-pill {
       padding: 2px 8px;
       border-radius: 999px;
-      border: 1px solid rgba(255, 107, 156, 0.4);
-      background: #fff3f8;
+      border: 1px solid rgba(155, 107, 255, 0.5);
+      background: #f4edff;
       font-size: 11px;
-      color: #ff4a88;
+      color: var(--primary-deep);
     }
 
     table {
@@ -303,21 +336,21 @@
       border-collapse: collapse;
       font-size: 11px;
       margin-top: 4px;
-      background: #fffafa;
+      background: #fbf8ff;
       border-radius: 12px;
       overflow: hidden;
     }
     th, td {
       padding: 4px 6px;
-      border-bottom: 1px solid #f8d7e4;
+      border-bottom: 1px solid #e2d6ff;
     }
     th {
-      background: #ffe6f0;
-      color: #c44569;
+      background: #e9ddff;
+      color: #5a4c81;
     }
 
     canvas {
-      background: #fffdfd;
+      background: #fbf8ff;
       border-radius: 12px;
       padding: 4px;
     }
@@ -336,10 +369,10 @@
   <!-- 顶部导航条 -->
   <div class="topbar">
     <div class="topbar-left">
-      <div class="topbar-logo">🌸</div>
+      <div class="topbar-logo">🌙</div>
       <div>
-        <div class="topbar-title">女性健康小助手</div>
-        <div class="topbar-sub">生理周期 · 情绪 · 生活方式温柔记录</div>
+        <div class="topbar-title">女性健康小助手 · 梦幻紫</div>
+        <div class="topbar-sub">生理周期 · 情绪 · 生活方式 · 星光下的自我照顾</div>
       </div>
     </div>
     <div class="topbar-right">本地匿名记录 · Firebase 学习示例</div>
@@ -352,10 +385,10 @@
         <span class="tag-pill">⚠ 非医疗产品</span>
         <span>仅用于课程 / 研究示例，不作为正式诊断与医疗建议。</span>
       </div>
-      <h1>生理周期与情绪管理 · Web 版</h1>
+      <h1>生理周期与情绪管理 · 星光版</h1>
       <p class="small-text">
         流程：填写<b>基本资料</b> → 分步记录<b>生理周期 / 身体状况 / 情绪 / 生活方式</b> → 自动生成<b>健康建议</b>与<b>趋势图表</b>，
-        灵感参考美柚等女性健康 App 的视觉风格。
+        色调参考美柚，主色为梦幻紫 & 星光氛围。
       </p>
     </div>
 
@@ -368,7 +401,7 @@
         <div class="col-2">
           <div class="form-group">
             <label>昵称</label>
-            <input type="text" id="profile-name" placeholder="例如：小A / 小橙子" />
+            <input type="text" id="profile-name" placeholder="例如：小A / 小月亮" />
           </div>
           <div class="form-group">
             <label>年龄</label>
@@ -386,7 +419,7 @@
 
         <div class="col-1">
           <div class="form-group">
-            <label>平均月经周期长度（天）<span class="badge">常见范围：21–35</span></label>
+            <label>平均月经周期长度（天）<span class="small-text">（常见：21–35）</span></label>
             <input type="number" id="profile-cycle-length" min="15" max="60" />
           </div>
           <div class="form-group">
@@ -420,7 +453,7 @@
       <div class="card">
         <div style="display:flex; justify-content:space-between; align-items:center; gap:8px; flex-wrap:wrap;">
           <div>
-            <h2 id="tracker-title">② 每日温柔记录</h2>
+            <h2 id="tracker-title">② 每日记录 · 今夜星光下的你</h2>
             <div class="step-indicator">
               <span class="step-pill">当前步骤：<span id="step-text">1 / 5</span></span>
               <span>生理周期 → 身体状况 → 情绪 → 情绪&生活方式 → 当日建议</span>
@@ -435,6 +468,7 @@
         <div class="col-2">
           <div class="card">
             <h3>📅 当日记录</h3>
+            <p class="small-text" style="margin-bottom:8px;">只需要几分钟，把今天的身体与情绪悄悄记下来。</p>
             <div id="record-msg"></div>
 
             <div class="form-group">
@@ -445,6 +479,7 @@
             <!-- Step 1：生理周期扩展数据 -->
             <div class="step-page" id="step-1">
               <div class="section-title">1. 生理周期扩展数据</div>
+              <p class="small-text">这一页主要是关于“今天的经期情况”，简单选择即可～</p>
               <div class="form-group">
                 <label>今天是否在经期？</label>
                 <select id="cycle-on-period">
@@ -481,22 +516,23 @@
                   <label><input type="checkbox" name="symptom" value="情绪波动">情绪波动</label>
                 </div>
               </div>
-              <button class="btn-primary" type="button" onclick="nextStep()">下一页：身体状况 →</button>
+              <button class="btn-primary" type="button" onclick="nextStep()">下一步：身体状况 →</button>
             </div>
 
             <!-- Step 2：身体状况相关 -->
             <div class="step-page hidden" id="step-2">
               <div class="section-title">2. 身体状况相关</div>
+              <p class="small-text">看看身体今天发出的信号：体重、运动、睡眠和喝水情况。</p>
               <div class="form-group">
-                <label>今日体重（kg）</label>
+                <label>今日体重（kg）<span class="small-text">（可选）</span></label>
                 <input type="number" id="body-weight" step="0.1" />
               </div>
               <div class="form-group">
-                <label>今日步数</label>
+                <label>今日步数<span class="small-text">（可选）</span></label>
                 <input type="number" id="body-steps" />
               </div>
               <div class="form-group">
-                <label>有氧 / 运动时间（分钟）</label>
+                <label>有氧 / 运动时间（分钟）<span class="small-text">（可选）</span></label>
                 <input type="number" id="body-exercise-min" />
               </div>
               <div class="form-group">
@@ -518,13 +554,14 @@
                   <option value="高脂 / 油炸">高脂 / 油炸</option>
                 </select>
               </div>
-              <button class="btn-secondary" type="button" onclick="prevStep()">← 上一页</button>
-              <button class="btn-primary" type="button" onclick="nextStep()">下一页：情绪 →</button>
+              <button class="btn-secondary" type="button" onclick="prevStep()">← 上一步</button>
+              <button class="btn-primary" type="button" onclick="nextStep()">下一步：情绪 →</button>
             </div>
 
             <!-- Step 3：情绪 & 触发因素 -->
             <div class="step-page hidden" id="step-3">
               <div class="section-title">3. 情绪 & 触发因素</div>
+              <p class="small-text">情绪没有好坏，你现在的感受都很重要。</p>
               <div class="form-group">
                 <label>今日整体情绪评分（1=很差 ~ 5=很好）</label>
                 <input type="number" id="emotion-score" min="1" max="5" value="3" />
@@ -544,8 +581,8 @@
                   <label><input type="checkbox" name="trigger" value="荷尔蒙波动">荷尔蒙波动</label>
                 </div>
               </div>
-              <button class="btn-secondary" type="button" onclick="prevStep()">← 上一页</button>
-              <button class="btn-primary" type="button" onclick="nextStep()">下一页：情绪预测 & 生活方式 →</button>
+              <button class="btn-secondary" type="button" onclick="prevStep()">← 上一步</button>
+              <button class="btn-primary" type="button" onclick="nextStep()">下一步：情绪预测 & 生活方式 →</button>
             </div>
 
             <!-- Step 4：情绪预测相关 + 生活方式 / 习惯（同一页） -->
@@ -581,7 +618,7 @@
                 <textarea id="lifestyle-sex" placeholder="例如：安全期 / 是否避孕（请谨慎输入隐私信息）"></textarea>
               </div>
 
-              <button class="btn-secondary" type="button" onclick="prevStep()">← 上一页</button>
+              <button class="btn-secondary" type="button" onclick="prevStep()">← 上一步</button>
               <button class="btn-primary" type="button" onclick="saveDailyRecord(true)">保存并生成今日建议 →</button>
             </div>
 
@@ -776,7 +813,7 @@
     document.getElementById('tracker-view').classList.remove('hidden');
     if (userProfile && userProfile.name) {
       document.getElementById('tracker-title').textContent =
-        `② ${userProfile.name} 的每日记录`;
+        `② ${userProfile.name} 的每日记录 · 星光陪伴`;
     }
     currentStep = 1;
     updateStepUI();
@@ -876,23 +913,23 @@
     let html = '';
 
     if (daysToNext <= 3 && daysToNext >= -3) {
-      html += `<div class="reminder-item reminder-strong">
-        预计 ${daysToNext === 0 ? '今天' : (daysToNext + ' 天后')} 开始生理期，请提前准备经期用品，注意保暖与休息。
+      html += `<div class="small-text" style="margin-bottom:4px;">
+        预计 <b>${daysToNext === 0 ? '今天' : (daysToNext + ' 天后')}</b> 开始生理期，请提前准备经期用品，注意保暖与休息。
       </div>`;
     } else if (daysToNext > 3 && daysToNext <= cycleLen + 5) {
-      html += `<div class="reminder-item">预计约 ${daysToNext} 天后开始下一次生理期。</div>`;
+      html += `<div class="small-text" style="margin-bottom:4px;">预计约 <b>${daysToNext} 天后</b> 开始下一次生理期。</div>`;
     } else if (daysToNext < -3) {
-      html += `<div class="reminder-item">
+      html += `<div class="small-text" style="margin-bottom:4px;">
         本次月经已超过预计时间，如长期明显推迟，可结合自身情况考虑是否需要进一步检查。
       </div>`;
     }
 
     if (daysToOvulation >= -2 && daysToOvulation <= 2) {
-      html += `<div class="reminder-item reminder-strong">
+      html += `<div class="small-text" style="margin-bottom:4px;">
         当前处于排卵期附近易孕窗口。如不备孕，请注意有效避孕；如有备孕计划，可以适当安排。
       </div>`;
     } else if (daysToOvulation > 2 && daysToOvulation <= 7) {
-      html += `<div class="reminder-item">大约 ${daysToOvulation} 天后进入排卵期易孕窗口。</div>`;
+      html += `<div class="small-text" style="margin-bottom:4px;">大约 ${daysToOvulation} 天后进入排卵期易孕窗口。</div>`;
     }
 
     if (!html) {
@@ -1002,8 +1039,8 @@
           {
             label: '情绪评分',
             data: emoData,
-            borderColor: '#ff6b9c',
-            backgroundColor: 'rgba(255,107,156,0.12)',
+            borderColor: '#9b6bff',
+            backgroundColor: 'rgba(155,107,255,0.12)',
             tension: 0.25,
             yAxisID: 'y'
           },
